Initial version / help command / options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,4 +52,4 @@ line_length = 120
 multi_line_output = 3
 use_parentheses = true
 include_trailing_comma = true
-known_first_party = "4711"
+known_first_party = "_4711"
