--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,35 +21,35 @@ classifiers = [
     "Topic :: Utilities",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
     "License :: OSI Approved :: MIT License"
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6 || ^3.7 || ^3.8"
+python = "^3.7 || ^3.8 || ^3.9"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
 flake8-black = "^0.2.0"
-flake8-isort = "^3.0.0"
-isort = { version = "^4.3.21", extras = ["pyproject"] }
-pytest = "^5.4.3"
+flake8-isort = "^4.0.0"
+isort = { version = "^5.5.3", extras = ["pyproject"] }
+pytest = "^6.1.0"
 pytest-cov = "^2.10.0"
-black = "=19.10b0"
-codecov = "^2.1.7"
+black = "=20.8b1"
+mypy = "^0.782"
+codecov = "^2.1.9"
 
 [tool.poetry.scripts]
 4711 = "_4711:cli"
 
 [tool.black]
 line-length = 120
-target_version = ["py36", "py37", "py38"]
+target_version = ["py37", "py38"]
 
 [tool.isort]
+profile = "black"
 line_length = 120
-multi_line_output = 3
-use_parentheses = true
-include_trailing_comma = true
 known_first_party = "_4711"
+skip = ".mypy_cache,__pycache__"
